# instrumented-django-api

./: .gitignore  Dockerfile  ReadMe.MD  db.sqlite3  docker-compose.yaml  gunicorn.config.py  manage.py  otel-collector-config.yaml  prometheus.yml  pyproject.toml  start_server.sh
config/: celery.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/todos/: create_todo.html  home.html
todo/: admin.py  models.py  task.py  urls.py  views.py
todo/fixtures/: todo_seed_data.json
todo/migrations/: 0001_initial.py  0002_alter_todo_created_at.py
